--- a/index.html
+++ b/index.html
@@ -460,10 +460,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://addictionrehabclinic.github.io/Alcohol-Rehab/">https://addictionrehabclinic.github.io/Alcohol-Rehab/</a><br>
+                <a target="_bLank" href="https://addictionrehabclinic.s3.us-east-005.backblazeb2.com/Alcohol+Rehab/index.html">https://addictionrehabclinic.s3.us-east-005.backblazeb2.com/Alcohol+Rehab/index.html</a><br>
+                <a target="_bLank" href="https://alcohol-rehab-git-main-addictionrehabclinics-projects.vercel.app/">https://alcohol-rehab-git-main-addictionrehabclinics-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://animated-sunflower-f5a605.netlify.app/">https://animated-sunflower-f5a605.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
